--- a/style.css
+++ b/style.css
@@ -1,16 +1,36 @@
+body {
+  background-color: #434c5e;
+}
+
 h1 {
+  color: #ebcb8b;
   font-size: 36px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.header,
-.link {
+h3,
+li {
+  color: #d08770;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 24px;
 }
 
-li {
+li,
+.link
+p {
+  font-family: monospace;
+}
+
+li,
+p {
+  color: #d8dee9;
   font-size: 16px;
+}
+
+.link {
+  color: #a3be8c;
+  font-size: 20px;
+  
 }
 
 img {
